# osi-check-fmu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: OSICheck.cpp  OSICheck.h  modelDescription.in.xml
